k8s/prometheus/EtcdService.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-k8s
  namespace: kube-system
  labels:
    app.kubernetes.io/name: etcd-k8s
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http-metrics
    port: 2381
    targetPort: 2381
    protocol: TCP

---
apiVersion: v1
kind: Endpoints
metadata:
  name: etcd-k8s
  namespace: kube-system
  labels:
    app.kubernetes.io/name: etcd-k8s
subsets:
- addresses:
  ports:
    - name: http-metrics
      port: 2381
      protocol: TCP
